Correct styling and toggles for sidebar collapse button

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -315,6 +315,14 @@ body {
   padding: 0.2rem;
 }
 
+.sidebar__collapse--right {
+  transform: rotate(270deg);
+}
+
+.sidebar__collapse--left {
+  transform: rotate(90deg);
+}
+
 .list-name {
   padding-bottom: 0.1rem;
   white-space: nowrap;
@@ -537,7 +545,17 @@ body {
     flex-shrink: 0;
   }
 
+  .sidebar__collapse {
+    transform: rotate(270deg);
   }
+
+  .sidebar__collapse--left {
+    transform: rotate(90deg);
+  }
+
+  
+
+}
 
 /* Landscape phones and down */
 /* @media (max-width: 480px) { ... } */
